fixed table overflow bug

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2424,6 +2424,9 @@ select {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+.whitespace-normal {
+	white-space: normal;
+}
 .whitespace-nowrap {
 	white-space: nowrap;
 }
